--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,4 +8,7 @@ dependencies = [
     "fastapi[standard]>=0.115.8",
     "motor>=3.7.0",
     "odmantic>=1.0.2",
+    "pymongo>=4.11.1",
+    "python-dotenv>=1.0.1",
+    "sqlmodel>=0.0.22",
 ]
