--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,9 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "fastapi[standard]>=0.115.8",
+    "ipykernel>=6.29.5",
     "motor>=3.7.0",
+    "nest-asyncio>=1.6.0",
     "odmantic>=1.0.2",
     "pymongo>=4.11.1",
     "python-dotenv>=1.0.1",
